 the profiling was finished.
*Fixed recent menu. It now works as expected.
*Fixed forward engineering syntax error for LONG and LONG RAW in Oracle.
*Added convenient shortcut for performing a structural comparison directly from
 tree view of source database connections.
*Added the ability to used auto-increment in both MySQL and PostgreSQL

0.9.7

*Fixed a bug with handling of automatic cascading primary keys in multi-level
 identifying relationships.
*Fixed a bug which was causing the Architect to save corrupt project files.
 This bug was triggered by adding and removing a column from the primary key.
*Further enhanced the profile manager so it is possible to run profiles
 multiple times per session.
*Made it possible to add new database connection types from within the GUI.
*Corrected the JDBC URL template for IBM DB2.  If upgrading, to obtain this fix,
 you have to remove the DB2 database type from the user preferences dialog,
 then restart the Architect.
*Corrected an error in the user guide relating to the creation of FK
 relationships.
*And more!

0.9.6

Initial open-source release!

*Added the ability to create ETL jobs for Pentaho Data Integration (formerly
 Kettle)
*A number of bug fixes
*Replaced the icon set with the free FAMFAMFAM icon set, which looks much
 nicer than the Java Look-and-feel Graphics Repository we were using before.


0.9.5

Internal release, not publically promoted.

*Major bugfix: We now escape all characters in the project file which are
 impossible to represent in XML.  It is entirely possible for these characters
 to sneak into a profile result.


0.9.4

*Added PDF Export feature under File menu
*Added MySQL compatibility
*Improved DDL Generator Warnings interface to include a better UI and a "quick
 fix" feature which guesses the new value
*Improved Profiling GUI to include a profile manager for browsing, searching,
 and deleting existing profile data in the project